Switched to use CMake targets for Boost dependencies.
This is more robust as it doesn't require manually importing dependencies
for static libraries, and avoids libraries like system that switched to
header-only. While boost_system has a stub library with the default build,
when building Boost through CMake (e.g. to create a universal binary on
Mac) the stub library isn't created.

CMake 3.5 is now required as that introduced the targets in FindBoost.

Incremented version to 1.5.4.

--- a/Client/test/CMakeLists.txt
+++ b/Client/test/CMakeLists.txt
@@ -2,10 +2,7 @@ if (NOT GTEST_FOUND OR NOT MSL_BUILD_TESTS)
 	return()
 endif()
 
-if (NOT MSL_SHARED)
-	set(Boost_USE_STATIC_LIBS ON)
-endif()
-find_package(Boost COMPONENTS system filesystem REQUIRED)
+find_package(Boost COMPONENTS filesystem REQUIRED)
 find_package(Threads)
 
 file(GLOB_RECURSE sources *.cpp *.h)
@@ -17,9 +14,9 @@ add_custom_command(TARGET msl_client_test POST_BUILD
 	$<TARGET_FILE_DIR:msl_client_test>
 	COMMENT "Copying test shader module." VERBATIM)
 
-target_include_directories(msl_client_test PRIVATE ${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
+target_include_directories(msl_client_test PRIVATE ${GTEST_INCLUDE_DIRS})
 target_link_libraries(msl_client_test
-	PRIVATE msl_client ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+	PRIVATE msl_client Boost::filesystem ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 msl_set_folder(msl_client_test tests)
 add_test(NAME MSLClientTest COMMAND msl_client_test)
