--- a/tools/mslb-extract/CMakeLists.txt
+++ b/tools/mslb-extract/CMakeLists.txt
@@ -1,10 +1,9 @@
-find_package(Boost COMPONENTS system program_options filesystem)
+find_package(Boost COMPONENTS program_options filesystem)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslb-extract ${sources})
 
-target_include_directories(mslb-extract PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries(mslb-extract PRIVATE msl_client ${Boost_LIBRARIES})
+target_link_libraries(mslb-extract PRIVATE msl_client Boost::program_options Boost::filesystem)
 target_compile_definitions(mslb-extract PRIVATE BOOST_ALL_NO_LIB
 	MSL_MAJOR_VERSION=${MSL_MAJOR_VERSION} MSL_MINOR_VERSION=${MSL_MINOR_VERSION}
 	MSL_PATCH_VERSION=${MSL_PATCH_VERSION})
