--- a/tools/mslc/CMakeLists.txt
+++ b/tools/mslc/CMakeLists.txt
@@ -1,10 +1,9 @@
-find_package(Boost COMPONENTS system program_options)
+find_package(Boost COMPONENTS program_options)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslc ${sources})
 
-target_include_directories(mslc PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries(mslc PRIVATE msl_compile ${Boost_LIBRARIES})
+target_link_libraries(mslc PRIVATE msl_compile Boost::program_options)
 target_compile_definitions(mslc PRIVATE BOOST_ALL_NO_LIB
 	MSL_MAJOR_VERSION=${MSL_MAJOR_VERSION} MSL_MINOR_VERSION=${MSL_MINOR_VERSION}
 	MSL_PATCH_VERSION=${MSL_PATCH_VERSION})
