--- a/Compile/test/CMakeLists.txt
+++ b/Compile/test/CMakeLists.txt
@@ -2,7 +2,7 @@ if (NOT GTEST_FOUND OR NOT MSL_BUILD_TESTS)
 	return()
 endif()
 
-find_package(Boost COMPONENTS system filesystem REQUIRED)
+find_package(Boost COMPONENTS filesystem REQUIRED)
 find_package(Threads)
 
 file(GLOB_RECURSE sources *.cpp *.h)
@@ -18,9 +18,9 @@ add_custom_command(TARGET msl_compile_test POST_BUILD
 	COMMENT "Copying test outputs." VERBATIM)
 
 target_include_directories(msl_compile_test
-	PRIVATE ${GTEST_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${GLSLANG_DIR} ${SPIRV_CROSS_DIR} ../src)
+	PRIVATE ${GTEST_INCLUDE_DIRS} ${GLSLANG_DIR} ${SPIRV_CROSS_DIR} ../src)
 target_link_libraries(msl_compile_test
-	PRIVATE msl_compile ${Boost_LIBRARIES} ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+	PRIVATE msl_compile Boost::filesystem ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_compile_definitions(msl_compile_test PRIVATE BOOST_ALL_NO_LIB)
 
 msl_set_folder(msl_compile_test tests)
