--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,8 @@ set(MSL_ROOT_FOLDER MSL CACHE STRING
 	"Root folder for the MSL projects. Usefull when embedding in other projects.")
 set(MSL_INSTALL ON CACHE BOOL "Allow installation for MSL components.")
 
-if (APPLE)
-	if (NOT CMAKE_OSX_DEPLOYMENT_TARGET)
-		set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS deployment version." FORCE)
-	endif()
-	set(CMAKE_XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_ARCHITECTURE ${CMAKE_OSX_DEPLOYMENT_TARGET})
-	set(CMAKE_XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_ARCHITECTURE[arch=arm64] 11.0)
+if (APPLE AND NOT IOS AND NOT CMAKE_OSX_DEPLOYMENT_TARGET)
+	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS deployment version." FORCE)
 endif()
 
 if (MSL_BUILD_TESTS)
