--- a/cmake/templates/MSLConfig.cmake.in
+++ b/cmake/templates/MSLConfig.cmake.in
@@ -2,9 +2,9 @@ if (CMAKE_VERSION VERSION_LESS 3.0.2)
 	message(FATAL_ERROR "MSL requires at least CMake version 3.0.2")
 endif()
 
-if (NOT MSL_FIND_COMPONENTS)
+if (NOT MSL_FIND_COMPONENTS AND NOT @MSL_BUILD_TOOLS@)
 	set(MSL_NOT_FOUND_MESSAGE "The MSL package requires at least one component")
-	set(MSL_FOUND False)
+	set(MSL_FOUND OFF)
 	return()
 endif()
 
@@ -13,7 +13,7 @@ get_filename_component(_MSL_InstallPrefix ${CMAKE_CURRENT_LIST_DIR} ABSOLUTE)
 include(CMakeFindDependencyMacro)
 set(_MSL_NOTFOUND_MESSAGE)
 foreach(module ${MSL_FIND_COMPONENTS})
-	find_dependency(MSL${module})
+	find_dependency(MSL${module} @MSL_VERSION@ EXACT)
 	if (NOT MSL${module}_FOUND)
 		if (MSL_FIND_REQUIRED_${module})
 			set(_MSL_NOTFOUND_MESSAGE "${_MSL_NOTFOUND_MESSAGE}Failed to find MSL component \"${module}\" config file at \"${_MSL_InstallPrefix}/MSL${module}/MSL${module}Config.cmake\"\n")
@@ -25,5 +25,6 @@ endforeach()
 
 if (_MSL_NOTFOUND_MESSAGE)
 	set(MSL_NOT_FOUND_MESSAGE "${_MSL_NOTFOUND_MESSAGE}")
-	set(MSL_FOUND False)
+	set(MSL_FOUND OFF)
 endif()
+@toolTargetLines@
