--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -23,9 +23,9 @@ add_custom_command(OUTPUT ${outputFile}
 	WORKING_DIRECTORY ${rootDir}
 	DEPENDS ${dependencies} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile ${rootDir}/README.md
 	COMMENT "Generating API documentation with Doxygen" VERBATIM)
-add_custom_target(doc ALL DEPENDS ${outputFile})
+add_custom_target(msl_doc ALL DEPENDS ${outputFile})
 
-msl_set_folder(doc "")
+msl_set_folder(msl_doc "")
 
 if (MSL_INSTALL)
 	install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html/ DESTINATION ${CMAKE_INSTALL_DOCDIR})
