--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,11 @@ set(MSL_ROOT_FOLDER MSL CACHE STRING
 set(MSL_INSTALL ON CACHE BOOL "Allow installation for MSL components.")
 set(MSL_INSTALL_SET_RPATH ON CACHE BOOL "Set rpath for libraries and tools on installation.")
 
+if (NOT MSL_BUILD_COMPILE AND NOT MSL_BUILD_CLIENT)
+	message(FATAL_ERROR
+		"Must have at least one of MSL_BUILD_COMPILE and MSL_BUILD_CLIENT set to ON.")
+endif()
+
 if (APPLE AND NOT IOS AND NOT CMAKE_OSX_DEPLOYMENT_TARGET)
 	set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS deployment version." FORCE)
 endif()
@@ -75,8 +80,8 @@ if (MSL_OUTPUT_DIR)
 endif()
 
 set(MSL_MAJOR_VERSION 1)
-set(MSL_MINOR_VERSION 5)
-set(MSL_PATCH_VERSION 5)
+set(MSL_MINOR_VERSION 6)
+set(MSL_PATCH_VERSION 0)
 set(MSL_VERSION ${MSL_MAJOR_VERSION}.${MSL_MINOR_VERSION}.${MSL_PATCH_VERSION})
 
 set(MSL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
