Fixes to CI config for github actions importer.
Switched CMake jobs to scripts to avoid incompatibilities. Use separate
core count for Mac nodes and fixed capitalization of image name.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,22 +42,17 @@ jobs:
             cmake --build . --target install
         displayName: Build gtest
         workingDirectory: $(Build.BinariesDirectory)
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: >
-                -DCMAKE_BUILD_TYPE=Debug $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
-        displayName: Run CMake debug
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: --build . -j $(cores.count)
+      - script: |
+            mkdir Debug
+            cd Debug
+            cmake -DCMAKE_BUILD_TYPE=Debug $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
+            cmake --build . -j $(cores.count)
         displayName: Build debug
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: --build . --target test
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest
         displayName: Run tests debug
+        workingDirectory: $(Build.BinariesDirectory)/Debug
         continueOnError: true
         timeoutInMinutes: 10
       - task: PublishTestResults@2
@@ -71,23 +66,17 @@ jobs:
         displayName: Publish test results debug
       - script: rm -r $(Common.TestResultsDirectory)/*
         displayName: Clear test results
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: >
-                -DCMAKE_BUILD_TYPE=Release $(cmake.commonArgs) $(cmake.args)
-                $(Build.SourcesDirectory)
-        displayName: Run CMake release
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: --build . -j $(cores.count)
+      - script: |
+            mkdir Release
+            cd Release
+            cmake -DCMAKE_BUILD_TYPE=Release $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
+            cmake --build . -j $(cores.count)
         displayName: Build release
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: --build . --target test
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest
         displayName: Run tests release
+        workingDirectory: $(Build.BinariesDirectory)/Release
         continueOnError: true
         timeoutInMinutes: 10
       - task: PublishTestResults@2
@@ -101,7 +90,7 @@ jobs:
         displayName: Publish test results release
   - job: Mac
     pool:
-        vmImage: macOS-latest
+        vmImage: macos-latest
     workspace:
         clean: all
     strategy:
@@ -126,26 +115,21 @@ jobs:
             cd build
             cmake .. -DCMAKE_BUILD_TYPE=Release \
                 -DCMAKE_INSTALL_PREFIX=$(dependency.location)
-            cmake --build . -j $(cores.count)
+            cmake --build . -j $(cores.mac.count)
             cmake --build . --target install
         displayName: Build gtest
         workingDirectory: $(Build.BinariesDirectory)
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: >
-                -DCMAKE_BUILD_TYPE=Debug $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
-        displayName: Run CMake debug
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: --build . -j $(cores.count)
+      - script: |
+            mkdir Debug
+            cd Debug
+            cmake -DCMAKE_BUILD_TYPE=Debug $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
+            cmake --build . -j $(cores.mac.count)
         displayName: Build debug
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Debug
-            cmakeArgs: --build . --target test
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest
         displayName: Run tests debug
+        workingDirectory: $(Build.BinariesDirectory)/Debug
         continueOnError: true
         timeoutInMinutes: 10
       - task: PublishTestResults@2
@@ -159,23 +143,17 @@ jobs:
         displayName: Publish test results debug
       - script: rm -r $(Common.TestResultsDirectory)/*
         displayName: Clear test results
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: >
-                -DCMAKE_BUILD_TYPE=Release $(cmake.commonArgs) $(cmake.args)
-                $(Build.SourcesDirectory)
-        displayName: Run CMake release
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: --build . -j $(cores.count)
+      - script: |
+            mkdir Release
+            cd Release
+            cmake -DCMAKE_BUILD_TYPE=Release $(cmake.commonArgs) $(cmake.args) $(Build.SourcesDirectory)
+            cmake --build . -j $(cores.mac.count)
         displayName: Build release
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)/Release
-            cmakeArgs: --build . --target test
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest
         displayName: Run tests release
+        workingDirectory: $(Build.BinariesDirectory)/Release
         continueOnError: true
         timeoutInMinutes: 10
       - task: PublishTestResults@2
@@ -242,21 +220,18 @@ jobs:
             cmake --build . --config Release --target install
         displayName: Build gtest
         workingDirectory: $(Build.BinariesDirectory)/googletest-code/build
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)
-            cmakeArgs: $(cmake.commonArgs) $(cmake.args) -A $(arch) -T v141 $(Build.SourcesDirectory)
+      - script: |
+            cmake $(cmake.commonArgs) $(cmake.args) -A $(arch) -T v141 $(Build.SourcesDirectory)
         displayName: Run CMake
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)
-            cmakeArgs: --build . --config Debug
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            cmake --build . --config Debug
         displayName: Build debug
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)
-            cmakeArgs: --build . --config Debug --target run_tests
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest -C Debug
         displayName: Run tests debug
+        workingDirectory: $(Build.BinariesDirectory)
         continueOnError: true
         timeoutInMinutes: 10
         env:
@@ -274,16 +249,14 @@ jobs:
       - bash: rm -r *
         displayName: Clear test results
         workingDirectory: $(Common.TestResultsDirectory)
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)
-            cmakeArgs: --build . --config Release
+      - script: |
+            cmake --build . --config Release
         displayName: Build release
-      - task: CMake@1
-        inputs:
-            workingDirectory: $(Build.BinariesDirectory)
-            cmakeArgs: --build . --config Release --target run_tests
+        workingDirectory: $(Build.BinariesDirectory)
+      - script: |
+            ctest -C Release
         displayName: Run tests release
+        workingDirectory: $(Build.BinariesDirectory)
         continueOnError: true
         timeoutInMinutes: 10
         env:
