Disable SPIRV-Tools warnings on MSVC.
Avoids potential build failures due to warnings potentially introduced in
later versions of SPIRV-Cross or a new version of MSVC.

--- a/Compile/CMakeLists.txt
+++ b/Compile/CMakeLists.txt
@@ -39,14 +39,14 @@ set(SPIRV_SKIP_EXECUTABLES ON CACHE BOOL "" FORCE)
 set(SPIRV_SKIP_TESTS ON CACHE BOOL "" FORCE)
 set(SKIP_SPIRV_TOOLS_INSTALL ${MSL_SHARED} CACHE BOOL "" FORCE)
 # Ignore warnings for SPIRV-Tools.
-if (NOT MSVC)
-	set(origCxxFlags ${CMAKE_CXX_FLAGS})
+set(origCxxFlags ${CMAKE_CXX_FLAGS})
+if (MSVC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /w")
+else()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
 endif()
 add_subdirectory(SPIRV-Tools)
-if (NOT MSVC)
-	set(CMAKE_CXX_FLAGS ${origCxxFlags})
-endif()
+set(CMAKE_CXX_FLAGS ${origCxxFlags})
 
 # Don't care about warnings for external files.
 set(externalSources ${glslangSources} ${glslangOsSources} ${spirvCrossSources})
