--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   CTEST_OUTPUT_ON_FAILURE: '1'
   GTEST_OUTPUT: xml:${{ github.workspace }}/test-results/
-  boost_version: 1.80.0
+  boost_version: 1.83.0
   cmake_common_args: >-
     -DCMAKE_FIND_ROOT_PATH=${{ github.workspace }}/dependencies
     -DCMAKE_PREFIX_PATH=${{ github.workspace }}/dependencies
@@ -17,7 +17,8 @@ env:
   cores_mac_count: '3'
   dependency_location: "${{ github.workspace }}/dependencies"
   gtest_version: release-1.12.1
-  msvc_version: 14.1
+  msvc_version: 14.2
+  msvc_toolset: 142
   test_results_location: "${{ github.workspace }}/test-results"
 jobs:
   Linux:
@@ -205,7 +206,7 @@ jobs:
     - name: Build gtest
       run: |-
         cmake .. -DCMAKE_INSTALL_PREFIX=${{ env.dependency_location }} -Dgtest_force_shared_crt=ON `
-          -A ${{ matrix.arch }} -T v141 -DCMAKE_DEBUG_POSTFIX=d
+          -A ${{ matrix.arch }} -T v${{ env.msvc_toolset }} -DCMAKE_DEBUG_POSTFIX=d
         cmake --build . --config Debug
         cmake --build . --config Debug --target install
         # Need to also install release build to find the debug version.
@@ -216,8 +217,8 @@ jobs:
       run: |-
         mkdir build
         cd build
-        cmake ${{ env.cmake_common_args }} ${{ matrix.cmake_args }} -A ${{ matrix.arch }} -T v141 `
-          ${{ github.workspace }}
+        cmake ${{ env.cmake_common_args }} ${{ matrix.cmake_args }} -A ${{ matrix.arch }} `
+          -T v${{ env.msvc_toolset }} ${{ github.workspace }}
       working-directory: "${{ github.workspace }}"
     - name: Build debug
       run: cmake --build . --config Debug
