--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,12 @@
-cmake_minimum_required(VERSION 3.5)
+if (WIN32)
+	# Needs 3.15 for CMAKE_MSVC_RUNTIME_LIBRARY.
+	cmake_minimum_required(VERSION 3.15)
+else()
+	cmake_minimum_required(VERSION 3.10)
+endif()
+if (POLICY CMP0144)
+	cmake_policy(SET CMP0144 NEW)
+endif()
 project(MSL)
 
 # Build options
@@ -9,6 +17,7 @@ else()
 	set(MSL_SHARED_DEFAULT OFF)
 endif()
 set(MSL_SHARED ${MSL_SHARED_DEFAULT} CACHE BOOL "Build MSL using shared libraries.")
+set(MSL_STATIC_RUNTIME OFF CACHE BOOL "Use static runtime library on Windows.")
 
 # Options for disabling portions of the build.
 set(MSL_BUILD_TESTS ON CACHE BOOL "Build unit tests.")
