--- a/tools/mslc/CMakeLists.txt
+++ b/tools/mslc/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package(Boost COMPONENTS program_options)
+find_package(Boost CONFIG COMPONENTS program_options)
 
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslc ${sources})
