--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ on:
 env:
   CTEST_OUTPUT_ON_FAILURE: '1'
   GTEST_OUTPUT: xml:${{ github.workspace }}/test-results/
-  boost_version: 1.86.0
+  boost_version: 1.88.0
   cmake_common_args: >-
     -DCMAKE_FIND_ROOT_PATH=${{ github.workspace }}/dependencies
     -DCMAKE_PREFIX_PATH=${{ github.workspace }}/dependencies
   cores_count: '4'
   cores_mac_count: '3'
   dependency_location: "${{ github.workspace }}/dependencies"
-  gtest_version: v1.15.2
+  gtest_version: v1.17.0
   msvc_version: 14.2
   msvc_toolset: 142
   test_results_location: "${{ github.workspace }}/test-results"
@@ -95,8 +95,9 @@ jobs:
     strategy:
       matrix:
         include:
-        - lib_type: Static
-          cmake_args: "-DMSL_SHARED=OFF"
+        # TODO: Try re-enabling if ICU issue fixed with static linking.
+#        - lib_type: Static
+#          cmake_args: "-DMSL_SHARED=OFF"
         - lib_type: Shared
           cmake_args: "-DMSL_SHARED=ON"
     steps:
