Updated glslang, SPIRV-Cross, and SPIRV-Tools.
Replaced usage of the removed SPIRV remapper from glslang with equivalents
in SPIRV-Tool's optimizer. Also replaced spirv.hpp to that brought in
from SPIRV-Headers.

Use UTF-8 codepage for Windows, allowing for using Unicode paths similar to
what is currently done on Mac and Linux.

Avoid printing full output on invalid arguments. This makes it easier to
see what the error is for a simple mistake. Running tools by themselves
will still show the full help output, but now without other errors, though
will still have a non-zero exit code to indicate that it wasn't a
successful run.

--- a/tools/mslb-extract/CMakeLists.txt
+++ b/tools/mslb-extract/CMakeLists.txt
@@ -3,6 +3,11 @@ find_package(Boost CONFIG COMPONENTS program_options filesystem)
 file(GLOB_RECURSE sources *.cpp *.h)
 add_executable(mslb-extract ${sources})
 
+if (WIN32)
+	configure_file(mslb-extract.manifest.in ${CMAKE_CURRENT_BINARY_DIR}/mslb-extract.manifest @ONLY)
+	target_sources(mslb-extract PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/mslb-extract.manifest)
+endif()
+
 target_link_libraries(mslb-extract PRIVATE MSL::Client Boost::program_options Boost::filesystem)
 target_compile_definitions(mslb-extract PRIVATE BOOST_ALL_NO_LIB
 	MSL_MAJOR_VERSION=${MSL_MAJOR_VERSION} MSL_MINOR_VERSION=${MSL_MINOR_VERSION}
